--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.1.0",
+    "antd": "^5.6.3",
     "atropos": "^1.0.2",
     "bootstrap": "^5.2.3",
     "flowbite": "^1.6.5",
