--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.1.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.6.3",
     "atropos": "^1.0.2",
     "bootstrap": "^5.2.3",
@@ -22,6 +23,7 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.0",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.11.2",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
